package com.workoutperf.model

enum class Gender {
    FEMALE, MALE
}